# ds4_utils

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: view_control.yaml
launch/: view_control.launch
nodes/: view_control.py
src/ds4_utils/: trackpad_handler.py
